modified:   preprocess.ipynb 	modified:   preprocess.py

--- a/preprocess.ipynb
+++ b/preprocess.ipynb
@@ -146,12 +146,32 @@
     "        \n",
     "        cv2.imwrite(os.path.join(dest_dir, str(row.level), row.folder + '_' + row.image + '.jpeg'), a)\n",
     "        \n",
-    "        if (index // 5000 == 0):\n",
-    "            print 'Lote: ' + index + '/' + tot_lote\n",
+    "        if (index % 5000 == 0):\n",
+    "            print 'Lote: ' + str(index) + '/' + str(tot_lote)\n",
     "            \n",
     "    except:\n",
     "        print 'Error in ' + row.image\n",
     "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "101 % 100"
    ]
   }
  ],
