--- a/notebooks/train_keras.ipynb
+++ b/notebooks/train_keras.ipynb
@@ -224,7 +224,12 @@
     "w3 = len_3 * 1./ len_tot\n",
     "w4 = len_4 * 1./ len_tot\n",
     "\n",
-    "class_weight = {0: w0, 1: w1, 2: w2, 3: w3, 4: w4}"
+    "#class_weight = {0: w0, 1: w1, 2: w2, 3: w3, 4: w4}\n",
+    "class_weight = {0: 0.46182373, \n",
+    "                1: 1.33303985, \n",
+    "                2: 0.62618633, \n",
+    "                3: 3.90590631, \n",
+    "                4: 4.31936937}"
    ]
   },
   {
