modified:   notebooks/.ipynb_checkpoints/split_data-checkpoint.ipynb 	modified:   notebooks/.ipynb_checkpoints/train_keras-checkpoint.ipynb 	modified:   notebooks/split_data.ipynb 	modified:   notebooks/train_keras.ipynb

--- a/notebooks/split_data.ipynb
+++ b/notebooks/split_data.ipynb
@@ -205,6 +205,31 @@
     "    shutil.move('../data/all/' + str(row.level) + '/' + row.folder + '_' + row.image + '.jpeg', \n",
     "                '../data/test/' + str(row.level) + '/' + row.folder + '_' + row.image + '.jpeg')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Create a Small Dataset to Train"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os, random, shutil\n",
+    "\n",
+    "base_dir = '../data/'\n",
+    "\n",
+    "for d in ['train', 'test']:\n",
+    "    for c in range(0,5):\n",
+    "        files = os.listdir(base_dir + d + '/' + str(c))\n",
+    "        sample = random.sample(files, 200)\n",
+    "        for f in sample:\n",
+    "            shutil.copyfile(os.path.join(base_dir, d, str(c), f), os.path.join(base_dir, 'small_' + d, str(c), f))"
+   ]
   }
  ],
  "metadata": {
