modified:   notebooks/.ipynb_checkpoints/train_keras-checkpoint.ipynb 	modified:   notebooks/calc_mean_std.ipynb 	modified:   notebooks/train_keras.ipynb

--- a/notebooks/calc_mean_std.ipynb
+++ b/notebooks/calc_mean_std.ipynb
@@ -180,31 +180,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Média do Canal 0: 104.183330781893\n",
-      "Média do Canal 1: 106.9134984430727\n",
-      "Média do Canal 2: 111.30260913923182\n",
+      "mean_0 = 104.183330781893\n",
+      "mean_1 = 106.9134984430727\n",
+      "mean_2 = 111.30260913923182\n",
       "\n",
-      "Desvio Padrão do Canal 0: 4.2141225097\n",
-      "Desvio Padrão do Canal 1: 4.49451983235\n",
-      "Desvio Padrão do Canal 2: 4.5237623716\n"
+      "std_0 = 4.2141225097\n",
+      "std_1 = 4.49451983235\n",
+      "std_2 = 4.5237623716\n"
      ]
     }
    ],
    "source": [
-    "print('Média do Canal 0: ' + str(mean_0))\n",
-    "print('Média do Canal 1: ' + str(mean_1))\n",
-    "print('Média do Canal 2: ' + str(mean_2))\n",
+    "print('mean_0 = ' + str(mean_0))\n",
+    "print('mean_1 = ' + str(mean_1))\n",
+    "print('mean_2 = ' + str(mean_2))\n",
     "print('')\n",
-    "print('Desvio Padrão do Canal 0: ' + str(std_0))\n",
-    "print('Desvio Padrão do Canal 1: ' + str(std_1))\n",
-    "print('Desvio Padrão do Canal 2: ' + str(std_2))"
+    "print('std_0 = ' + str(std_0))\n",
+    "print('std_1 = ' + str(std_1))\n",
+    "print('std_2 = ' + str(std_2))"
    ]
   }
  ],
