--- a/notebooks/train_keras.ipynb
+++ b/notebooks/train_keras.ipynb
@@ -20,43 +20,18 @@
    },
    "outputs": [],
    "source": [
+    "import os\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "%matplotlib inline\n",
+    "\n",
     "base_dir = '../data/'\n",
     "train_dir = base_dir + 'small_train/'\n",
     "validation_dir = base_dir + 'small_test/'\n",
     "img_width = 540\n",
     "img_height = 540\n",
     "img_channel = 3"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "9wqsEsGfwJQo"
-   },
-   "source": [
-    "### Gerando dados artificialmente"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 34
-    },
-    "colab_type": "code",
-    "id": "Kgu83kCmwJQr",
-    "outputId": "44d9356c-169e-4410-997e-2beeee519f55"
-   },
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "%matplotlib inline"
    ]
   },
   {
@@ -71,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -197,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,6 +196,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mean_0 = 104.183330781893\n",
+    "mean_1 = 106.9134984430727\n",
+    "mean_2 = 111.30260913923182\n",
+    "\n",
+    "std_0 = 4.2141225097\n",
+    "std_1 = 4.49451983235\n",
+    "std_2 = 4.5237623716\n",
+    "\n",
+    "def z_score(image):\n",
+    "    image = np.array(image)\n",
+    "    image[:,:,0] = np.subtract(image[:,:,0], [mean_0]) / std_0\n",
+    "    image[:,:,1] = np.subtract(image[:,:,1], [mean_1]) / std_1\n",
+    "    image[:,:,2] = np.subtract(image[:,:,2], [mean_2]) / std_2\n",
+    "    return image\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "metadata": {
     "colab": {},
@@ -231,15 +228,25 @@
    "source": [
     "from keras_preprocessing.image import ImageDataGenerator\n",
     "\n",
+    "#train_datagen = ImageDataGenerator(\n",
+    "#    rescale=1./255,\n",
+    "#    rotation_range=360,\n",
+    "#    zoom_range=[1 / 1.15, 1.15],\n",
+    "#    horizontal_flip=True,\n",
+    "#    vertical_flip=True)\n",
+    "\n",
+    "#validation_datagen = ImageDataGenerator(\n",
+    "#    rescale=1./255)\n",
+    "\n",
     "train_datagen = ImageDataGenerator(\n",
-    "    rescale=1./255,\n",
+    "    preprocessing_function=z_score,\n",
     "    rotation_range=360,\n",
     "    zoom_range=[1 / 1.15, 1.15],\n",
     "    horizontal_flip=True,\n",
     "    vertical_flip=True)\n",
     "\n",
     "validation_datagen = ImageDataGenerator(\n",
-    "    rescale=1./255)\n"
+    "    preprocessing_function=z_score)\n"
    ]
   },
   {
@@ -413,79 +420,55 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/200\n",
-      "40/40 [==============================] - 146s 4s/step - loss: 1.6108 - acc: 0.1730 - val_loss: 1.6094 - val_acc: 0.2000\n",
+      "40/40 [==============================] - 147s 4s/step - loss: 1.6222 - acc: 0.1890 - val_loss: 1.6118 - val_acc: 0.2250\n",
       "\n",
-      "Epoch 00001: val_loss improved from inf to 1.60940, saving model to ../models/diabetic_retinopathy_model.h5\n",
+      "Epoch 00001: val_loss improved from inf to 1.61184, saving model to ../models/diabetic_retinopathy_model.h5\n",
       "Epoch 2/200\n",
-      "40/40 [==============================] - 128s 3s/step - loss: 1.6097 - acc: 0.2000 - val_loss: 1.6093 - val_acc: 0.2000\n",
+      "40/40 [==============================] - 130s 3s/step - loss: 1.6091 - acc: 0.2100 - val_loss: 1.5988 - val_acc: 0.2630\n",
       "\n",
-      "Epoch 00002: val_loss improved from 1.60940 to 1.60931, saving model to ../models/diabetic_retinopathy_model.h5\n",
+      "Epoch 00002: val_loss improved from 1.61184 to 1.59879, saving model to ../models/diabetic_retinopathy_model.h5\n",
       "Epoch 3/200\n",
-      "40/40 [==============================] - 129s 3s/step - loss: 1.6095 - acc: 0.1900 - val_loss: 1.6093 - val_acc: 0.2000\n",
+      "40/40 [==============================] - 130s 3s/step - loss: 1.5984 - acc: 0.2310 - val_loss: 1.5856 - val_acc: 0.2450\n",
       "\n",
-      "Epoch 00003: val_loss did not improve from 1.60931\n",
+      "Epoch 00003: val_loss improved from 1.59879 to 1.58563, saving model to ../models/diabetic_retinopathy_model.h5\n",
       "Epoch 4/200\n",
-      "40/40 [==============================] - 129s 3s/step - loss: 1.6100 - acc: 0.1830 - val_loss: 1.6093 - val_acc: 0.2010\n",
+      "40/40 [==============================] - 130s 3s/step - loss: 1.5881 - acc: 0.2510 - val_loss: 1.5802 - val_acc: 0.2520\n",
       "\n",
-      "Epoch 00004: val_loss improved from 1.60931 to 1.60928, saving model to ../models/diabetic_retinopathy_model.h5\n",
+      "Epoch 00004: val_loss improved from 1.58563 to 1.58025, saving model to ../models/diabetic_retinopathy_model.h5\n",
       "Epoch 5/200\n",
-      "40/40 [==============================] - 129s 3s/step - loss: 1.6092 - acc: 0.2190 - val_loss: 1.6084 - val_acc: 0.2000\n",
+      "40/40 [==============================] - 130s 3s/step - loss: 1.5742 - acc: 0.2700 - val_loss: 1.5895 - val_acc: 0.2530\n",
       "\n",
-      "Epoch 00005: val_loss improved from 1.60928 to 1.60844, saving model to ../models/diabetic_retinopathy_model.h5\n",
+      "Epoch 00005: val_loss did not improve from 1.58025\n",
       "Epoch 6/200\n",
-      "40/40 [==============================] - 129s 3s/step - loss: 1.6059 - acc: 0.2120 - val_loss: 1.5893 - val_acc: 0.2510\n",
+      "40/40 [==============================] - 130s 3s/step - loss: 1.5684 - acc: 0.2510 - val_loss: 1.5780 - val_acc: 0.2660\n",
       "\n",
-      "Epoch 00006: val_loss improved from 1.60844 to 1.58934, saving model to ../models/diabetic_retinopathy_model.h5\n",
+      "Epoch 00006: val_loss improved from 1.58025 to 1.57804, saving model to ../models/diabetic_retinopathy_model.h5\n",
       "Epoch 7/200\n",
-      "40/40 [==============================] - 129s 3s/step - loss: 1.5951 - acc: 0.2610 - val_loss: 1.5879 - val_acc: 0.2570\n",
+      "40/40 [==============================] - 130s 3s/step - loss: 1.5501 - acc: 0.2780 - val_loss: 1.5710 - val_acc: 0.2710\n",
       "\n",
-      "Epoch 00007: val_loss improved from 1.58934 to 1.58786, saving model to ../models/diabetic_retinopathy_model.h5\n",
+      "Epoch 00007: val_loss improved from 1.57804 to 1.57096, saving model to ../models/diabetic_retinopathy_model.h5\n",
       "Epoch 8/200\n",
-      "40/40 [==============================] - 129s 3s/step - loss: 1.5847 - acc: 0.2500 - val_loss: 1.5772 - val_acc: 0.2840\n",
+      "40/40 [==============================] - 130s 3s/step - loss: 1.5488 - acc: 0.2890 - val_loss: 1.5778 - val_acc: 0.2840\n",
       "\n",
-      "Epoch 00008: val_loss improved from 1.58786 to 1.57716, saving model to ../models/diabetic_retinopathy_model.h5\n",
+      "Epoch 00008: val_loss did not improve from 1.57096\n",
       "Epoch 9/200\n",
-      "40/40 [==============================] - 129s 3s/step - loss: 1.5752 - acc: 0.2790 - val_loss: 1.5856 - val_acc: 0.2520\n",
+      "40/40 [==============================] - 130s 3s/step - loss: 1.5356 - acc: 0.2840 - val_loss: 1.5693 - val_acc: 0.2890\n",
       "\n",
-      "Epoch 00009: val_loss did not improve from 1.57716\n",
+      "Epoch 00009: val_loss improved from 1.57096 to 1.56927, saving model to ../models/diabetic_retinopathy_model.h5\n",
       "Epoch 10/200\n",
-      "40/40 [==============================] - 129s 3s/step - loss: 1.5654 - acc: 0.2680 - val_loss: 1.5687 - val_acc: 0.2690\n",
+      "40/40 [==============================] - 130s 3s/step - loss: 1.5353 - acc: 0.2860 - val_loss: 1.5494 - val_acc: 0.2850\n",
       "\n",
-      "Epoch 00010: val_loss improved from 1.57716 to 1.56870, saving model to ../models/diabetic_retinopathy_model.h5\n",
+      "Epoch 00010: val_loss improved from 1.56927 to 1.54945, saving model to ../models/diabetic_retinopathy_model.h5\n",
       "Epoch 11/200\n",
-      "40/40 [==============================] - 129s 3s/step - loss: 1.5520 - acc: 0.2720 - val_loss: 1.5795 - val_acc: 0.2610\n",
+      "40/40 [==============================] - 130s 3s/step - loss: 1.5267 - acc: 0.2940 - val_loss: 1.5489 - val_acc: 0.2770\n",
       "\n",
-      "Epoch 00011: val_loss did not improve from 1.56870\n",
+      "Epoch 00011: val_loss improved from 1.54945 to 1.54888, saving model to ../models/diabetic_retinopathy_model.h5\n",
       "Epoch 12/200\n",
-      "40/40 [==============================] - 129s 3s/step - loss: 1.5462 - acc: 0.2860 - val_loss: 1.5907 - val_acc: 0.2630\n",
+      "40/40 [==============================] - 130s 3s/step - loss: 1.5153 - acc: 0.3140 - val_loss: 1.5664 - val_acc: 0.2830\n",
       "\n",
-      "Epoch 00012: val_loss did not improve from 1.56870\n",
+      "Epoch 00012: val_loss did not improve from 1.54888\n",
       "Epoch 13/200\n",
-      "40/40 [==============================] - 129s 3s/step - loss: 1.5565 - acc: 0.2810 - val_loss: 1.5753 - val_acc: 0.2660\n",
-      "\n",
-      "Epoch 00013: val_loss did not improve from 1.56870\n",
-      "Epoch 14/200\n",
-      "40/40 [==============================] - 129s 3s/step - loss: 1.5512 - acc: 0.2850 - val_loss: 1.5761 - val_acc: 0.2610\n",
-      "\n",
-      "Epoch 00014: val_loss did not improve from 1.56870\n",
-      "Epoch 15/200\n",
-      "40/40 [==============================] - 129s 3s/step - loss: 1.5342 - acc: 0.2870 - val_loss: 1.5872 - val_acc: 0.2590\n",
-      "\n",
-      "Epoch 00015: val_loss did not improve from 1.56870\n",
-      "Epoch 16/200\n",
-      "40/40 [==============================] - 129s 3s/step - loss: 1.5329 - acc: 0.3010 - val_loss: 1.6132 - val_acc: 0.2720\n",
-      "\n",
-      "Epoch 00016: val_loss did not improve from 1.56870\n",
-      "Epoch 17/200\n",
-      "40/40 [==============================] - 129s 3s/step - loss: 1.5315 - acc: 0.2950 - val_loss: 1.5793 - val_acc: 0.2710\n",
-      "\n",
-      "Epoch 00017: val_loss did not improve from 1.56870\n",
-      "Epoch 18/200\n",
-      "40/40 [==============================] - 129s 3s/step - loss: 1.5284 - acc: 0.2870 - val_loss: 1.5632 - val_acc: 0.2800\n",
-      "\n",
-      "Epoch 00018: val_loss improved from 1.56870 to 1.56318, saving model to ../models/diabetic_retinopathy_model.h5\n",
-      "Epoch 19/200\n",
-      "15/40 [==========>...................] - ETA: 59s - loss: 1.5239 - acc: 0.2880 "
+      "32/40 [=======================>......] - ETA: 19s - loss: 1.5215 - acc: 0.3137"
      ]
     }
    ],
